<resources>
    <string name="app_name">ProAndroidDevDaggerKotlin</string>
    <string name="example_1">Ex1: Activity with 1 Fragment</string>
    <string name="example_2">Ex2: Activity with 2 Fragments</string>
    <string name="example_3">Ex3: Activity with 1 Fragment with 1 child Fragment</string>
    <string name="example_4">Ex4: Ex1 Fragment as a floating dialog</string>
    <string name="example_5">Ex5: Ex3 Fragment as a floating dialog</string>
    <string name="fragment">Fragment</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_parent">Parent Fragment</string>
    <string name="fragment_child">Child Fragment</string>
    <string name="do_something">Do something</string>
    <string name="main_fragment_title_message">Choose fragment to be started</string>
</resources>
